--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </ul>
       </header>
       <section>
-        <p>This messages tableview controller is very similar to the one in the iOS Messages app. <strong>Note, this is only a messaging UI, not a messaging app.</strong> This is intended to be used in an existing app where you have (or are developing) a messaging system and need a user interface for it.</p>
+        <p><a href="http://travis-ci.org/jessesquires/MessagesTableViewController"><img src="https://secure.travis-ci.org/jessesquires/MessagesTableViewController.png" alt="Build Status"></a></p>
+
+<p>This messages tableview controller is very similar to the one in the iOS Messages app. <strong>Note, this is only a messaging UI, not a messaging app.</strong> This is intended to be used in an existing app where you have (or are developing) a messaging system and need a user interface for it.</p>
 
 <p><img src="https://raw.github.com/jessesquires/MessagesTableViewController/master/Screenshots/iphone5-screenshot0.png" alt="Messages Screenshot 1"></p>
 
