--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </ul>
       </header>
       <section>
-        <p><a href="http://travis-ci.org/jessesquires/MessagesTableViewController"><img src="https://secure.travis-ci.org/jessesquires/MessagesTableViewController.png" alt="Build Status"></a></p>
+        <p><code>JSMessagesViewController</code> is a <code>UITableViewController</code> subclass that is very similar to the iOS Messages app. <strong>Note, this is only a messaging UI, not a messaging app.</strong></p>
 
-<p><code>JSMessagesViewController</code> is a <code>UITableViewController</code> subclass that is very similar to the iOS Messages app. <strong>Note, this is only a messaging UI, not a messaging app.</strong></p>
+<p><a href="http://travis-ci.org/jessesquires/MessagesTableViewController"><img src="https://secure.travis-ci.org/jessesquires/MessagesTableViewController.png" alt="Build Status"></a></p>
 
-<p><img src="https://raw.github.com/jessesquires/MessagesTableViewController/master/Screenshots/iphone5-screenshot0.png" alt="Messages Screenshot 1"></p>
+<p><img src="https://raw.github.com/jessesquires/MessagesTableViewController/master/Screenshots/iphone5-screenshot5.png" alt="Messages Screenshot 1"></p>
 
 <p><em>See more <a href="https://github.com/jessesquires/MessagesTableViewController/tree/master/Screenshots">screenshots</a> in the <code>Screenshots/</code> directory.</em></p>
 
@@ -117,6 +117,8 @@
 <a name="credits" class="anchor" href="#credits"><span class="octicon octicon-link"></span></a>Credits</h2>
 
 <p>Created by <a href="https://twitter.com/jesse_squires">Jesse Squires</a>, a <a href="http://programming-motherfucker.com">programming-motherfucker</a>.</p>
+
+<p>Assets extracted using <a href="https://github.com/0xced">0xced</a> <strong>/</strong> <a href="https://github.com/0xced/iOS-Artwork-Extractor">iOS-Artwork-Extractor</a>.</p>
 
 <p>Originally inspired by <a href="http://github.com/soffes">@soffes</a> <strong>/</strong> <a href="https://github.com/soffes/ssmessagesviewcontroller">SSMessagingViewController</a>.</p>
 
