Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
 <a name="from-cocoapods" class="anchor" href="#from-cocoapods"><span class="octicon octicon-link"></span></a>From <a href="http://www.cocoapods.org">CocoaPods</a>
 </h4>
 
-<pre><code>pod 'JSMessagesViewController'
-</code></pre>
+<p><code>pod 'JSMessagesViewController'</code></p>
 
 <h4>
 <a name="from-source" class="anchor" href="#from-source"><span class="octicon octicon-link"></span></a>From source</h4>
@@ -116,9 +115,9 @@
 <h2>
 <a name="credits" class="anchor" href="#credits"><span class="octicon octicon-link"></span></a>Credits</h2>
 
-<p>Created by <a href="https://twitter.com/jesse_squires">Jesse Squires</a>, a <a href="http://programming-motherfucker.com">programming-motherfucker</a>.</p>
+<p>Created by <a href="https://twitter.com/jesse_squires">@Jesse Squires</a>, a <a href="http://programming-motherfucker.com">programming-motherfucker</a>.</p>
 
-<p>Assets extracted using <a href="https://github.com/0xced">0xced</a> <strong>/</strong> <a href="https://github.com/0xced/iOS-Artwork-Extractor">iOS-Artwork-Extractor</a>.</p>
+<p>Assets extracted using <a href="https://github.com/0xced">@0xced</a> <strong>/</strong> <a href="https://github.com/0xced/iOS-Artwork-Extractor">iOS-Artwork-Extractor</a>.</p>
 
 <p>Originally inspired by <a href="http://github.com/soffes">@soffes</a> <strong>/</strong> <a href="https://github.com/soffes/ssmessagesviewcontroller">SSMessagingViewController</a>.</p>
 
